--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -210,6 +210,9 @@
     </layout>
    </widget>
    <widget class="QLabel" name="satImage">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>210</x>
