--- a/instrumentCluster/mainwindow.ui
+++ b/instrumentCluster/mainwindow.ui
@@ -7,58 +7,37 @@
     <x>0</x>
     <y>0</y>
     <width>320</width>
-    <height>512</height>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="titleText">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>321</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>26</pointsize>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Bike</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>50</y>
-      <width>201</width>
-      <height>81</height>
+      <y>10</y>
+      <width>191</width>
+      <height>70</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="speedLayout">
      <property name="spacing">
-      <number>0</number>
+      <number>10</number>
      </property>
      <item>
       <widget class="QLabel" name="speedText">
        <property name="font">
         <font>
+         <family>Franklin Gothic Book</family>
          <pointsize>38</pointsize>
-         <bold>true</bold>
+         <bold>false</bold>
         </font>
        </property>
        <property name="text">
-        <string>22.8</string>
+        <string>0.0</string>
        </property>
       </widget>
      </item>
@@ -83,7 +62,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>170</y>
+      <y>100</y>
       <width>128</width>
       <height>128</height>
      </rect>
@@ -105,17 +84,24 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>330</y>
-      <width>161</width>
-      <height>132</height>
+      <y>290</y>
+      <width>171</width>
+      <height>121</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="infoLayout">
+     <property name="horizontalSpacing">
+      <number>10</number>
+     </property>
+     <property name="verticalSpacing">
+      <number>5</number>
+     </property>
      <item row="0" column="0">
-      <widget class="QLabel" name="latText">
+      <widget class="QLabel" name="latLabel">
        <property name="font">
         <font>
-         <pointsize>16</pointsize>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -123,11 +109,25 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="lngText">
+     <item row="0" column="1">
+      <widget class="QLabel" name="latValueText">
        <property name="font">
         <font>
-         <pointsize>16</pointsize>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>00.000000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="lngLabel">
+       <property name="font">
+        <font>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -135,11 +135,25 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="altText">
+     <item row="1" column="1">
+      <widget class="QLabel" name="lngValueText">
        <property name="font">
         <font>
-         <pointsize>16</pointsize>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>00.000000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="altLabel">
+       <property name="font">
+        <font>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -147,51 +161,29 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label">
-       <property name="font">
-        <font>
-         <pointsize>16</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Conf.</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="latValueText">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>65.014414</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="lngValueText">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>25.483504</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="1">
       <widget class="QLabel" name="altValueText">
        <property name="font">
         <font>
-         <pointsize>12</pointsize>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>200 m</string>
+        <string>0 m</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="hdopLabel">
+       <property name="font">
+        <font>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>HDOP:</string>
        </property>
       </widget>
      </item>
@@ -199,11 +191,12 @@
       <widget class="QLabel" name="confidenceValueText">
        <property name="font">
         <font>
-         <pointsize>12</pointsize>
+         <family>Franklin Gothic Book</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>65 %</string>
+        <string>0</string>
        </property>
       </widget>
      </item>
@@ -215,10 +208,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>350</y>
-      <width>64</width>
-      <height>64</height>
+      <x>200</x>
+      <y>290</y>
+      <width>96</width>
+      <height>96</height>
      </rect>
     </property>
     <property name="text">
@@ -235,18 +228,63 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>430</y>
-      <width>129</width>
+      <y>400</y>
+      <width>130</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Franklin Gothic Book</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="timeText">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>10</y>
+      <width>61</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <family>Franklin Gothic Book</family>
+      <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>11</string>
+     <string>00:00</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="headingText">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>240</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Franklin Gothic Book</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>000 °</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
