--- a/instrumentCluster/mainwindow.ui
+++ b/instrumentCluster/mainwindow.ui
@@ -10,6 +10,12 @@
     <height>480</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>320</width>
+    <height>480</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -84,7 +90,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
+      <y>320</y>
       <width>171</width>
       <height>121</height>
      </rect>
@@ -131,7 +137,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Lng:</string>
+        <string>Long:</string>
        </property>
       </widget>
      </item>
@@ -208,10 +214,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>290</y>
-      <width>96</width>
-      <height>96</height>
+      <x>210</x>
+      <y>330</y>
+      <width>72</width>
+      <height>72</height>
      </rect>
     </property>
     <property name="text">
@@ -227,9 +233,9 @@
    <widget class="QLabel" name="satText">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>400</y>
-      <width>130</width>
+      <x>210</x>
+      <y>410</y>
+      <width>71</width>
       <height>30</height>
      </rect>
     </property>
@@ -291,17 +297,6 @@
     </property>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>320</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
   <include location="Resources.qrc"/>
