--- a/instrumentCluster/mainwindow.ui
+++ b/instrumentCluster/mainwindow.ui
@@ -24,9 +24,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>9</y>
       <width>191</width>
-      <height>70</height>
+      <height>71</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="speedLayout">
@@ -37,7 +37,6 @@
       <widget class="QLabel" name="speedText">
        <property name="font">
         <font>
-         <family>Franklin Gothic Book</family>
          <pointsize>38</pointsize>
          <bold>false</bold>
         </font>
@@ -68,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>100</y>
+      <y>110</y>
       <width>128</width>
       <height>128</height>
      </rect>
@@ -92,7 +91,7 @@
       <x>10</x>
       <y>320</y>
       <width>171</width>
-      <height>121</height>
+      <height>124</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="infoLayout">
@@ -100,13 +99,12 @@
       <number>10</number>
      </property>
      <property name="verticalSpacing">
-      <number>5</number>
+      <number>10</number>
      </property>
      <item row="0" column="0">
       <widget class="QLabel" name="latLabel">
        <property name="font">
         <font>
-         <family>Franklin Gothic Book</family>
          <pointsize>14</pointsize>
         </font>
        </property>
@@ -119,7 +117,6 @@
       <widget class="QLabel" name="latValueText">
        <property name="font">
         <font>
-         <family>Franklin Gothic Book</family>
          <pointsize>14</pointsize>
         </font>
        </property>
@@ -132,7 +129,6 @@
       <widget class="QLabel" name="lngLabel">
        <property name="font">
         <font>
-         <family>Franklin Gothic Book</family>
          <pointsize>14</pointsize>
         </font>
        </property>
@@ -145,7 +141,6 @@
       <widget class="QLabel" name="lngValueText">
        <property name="font">
         <font>
-         <family>Franklin Gothic Book</family>
          <pointsize>14</pointsize>
         </font>
        </property>
@@ -158,7 +153,6 @@
       <widget class="QLabel" name="altLabel">
        <property name="font">
         <font>
-         <family>Franklin Gothic Book</family>
          <pointsize>14</pointsize>
         </font>
        </property>
@@ -171,7 +165,6 @@
       <widget class="QLabel" name="altValueText">
        <property name="font">
         <font>
-         <family>Franklin Gothic Book</family>
          <pointsize>14</pointsize>
         </font>
        </property>
@@ -181,7 +174,7 @@
       </widget>
      </item>
      <item row="3" column="0">
-      <widget class="QLabel" name="hdopLabel">
+      <widget class="QLabel" name="accLabel">
        <property name="font">
         <font>
          <family>Franklin Gothic Book</family>
@@ -189,20 +182,23 @@
         </font>
        </property>
        <property name="text">
-        <string>HDOP:</string>
+        <string>Accr</string>
        </property>
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QLabel" name="confidenceValueText">
+      <widget class="QLabel" name="accValue">
        <property name="font">
         <font>
          <family>Franklin Gothic Book</family>
          <pointsize>14</pointsize>
         </font>
        </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
        <property name="text">
-        <string>0</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -241,7 +237,6 @@
     </property>
     <property name="font">
      <font>
-      <family>Franklin Gothic Book</family>
       <pointsize>12</pointsize>
      </font>
     </property>
@@ -252,40 +247,17 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="timeText">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>10</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Franklin Gothic Book</family>
-      <pointsize>18</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>00:00</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
    <widget class="QLabel" name="headingText">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>240</y>
+      <y>250</y>
       <width>131</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Franklin Gothic Book</family>
       <pointsize>14</pointsize>
      </font>
     </property>
